# Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  compiler.sublime-project  test.lang
compiler/: ast.odin  ast_nodes.odin  binder.odin  bound_nodes.odin  instructions.odin  lexer.odin  main.odin  operators.odin  parser.odin  token.odin  vm.odin
compiler/x64emit/: x64emit.odin
misc/: env.bat
src/: Array.h  Ast.c  Ast.h  AstBeginEndSwitchCases.h  Emitter.c  Emitter.h  Lexer.c  Lexer.h  Main.c  Parser.c  Parser.h  Resolver.c  Resolver.h  Strings.c  Strings.h  Token.c  Token.h  TokenBeginEndSwitchCases.h  Type.c  Type.h  VM.c  VM.h
